<resources>
    <string name="app_name">iTracker</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="provider_name">iTracker</string>
    <string name="authenticator_label">iTracker</string>
    <string name="tab_name_action">Action</string>
    <string name="tab_name_photo">Photo</string>
    <string name="tab_name_media">Media</string>
    <string name="tab_name_friends">Friends</string>
    <string name="friend_tab_name_messages">Messages</string>
    <string name="friend_tab_name_contacts">Contacts</string>
    <string name="signup_title">Create new account</string>
    <string name="login_label">Log in</string>
    <string name="accessibility_overflow">Overflow</string>
    <string name="send_message">Send message</string>
    <string name="edit_account">Edit account</string>
    <string name="funny_face">(╯°□°)╯︵ ┻━┻</string>
    <string name="empty_vcard_prompt">Can\'t find any more user profile info.</string>
    <string name="empty_vcard_prompt_plus">It\'ll be good if you could edit your account.</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_list">Show media as list</string>
    <string name="action_grid">Show media as grid</string>
    <string name="action_share">Share</string>
    <string name="action_download">Download</string>
    <string name="action_current_download">Current download</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="tracker_alert">iTracker Notification.</string>
    <string name="tracker_message">iTracker is recording the sensor data for you.</string>
    <string name="motion_date_placeholder">2015-10-25</string>
    <string name="motion_note_placeholder">Have done a lot of exercises today.</string>
    <string name="begin_date">Begin</string>
    <string name="end_date">End</string>
    <string name="date_popup_placeholder">2016, January 1, Fri</string>
    <string name="show_timeline">SHOW ACTIVITY TIMELINE</string>
    <string name="hide_timeline">HIDE ACTIVITY TIMELINE</string>
    <string name="need_time_for_timelines">Time is needed to get the activity timeline.</string>
    <string name="username_placeholder">Username</string>
    <string name="email_placeholder">username@myemail.com</string>
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="walking">Walking</string>
    <string name="unknown_activity">Unknown activity</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="request_camera_permission">The app needs camera permission to take the photo.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_text">iTracker Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="auth_failed">Failed to authenticate Firebase</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="empty_chat_messages">You don\'t have any messages</string>
    <string name="desc_itracker_icon">iTracker Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="about_body"><![CDATA[
        <b>iTracker</b><br>
        Version %s<br><br>
        Author <a href="mailto:bigbugbb@gmail.com?subject=iTracker">binbo</a><br><br>
        <a href="https://github.com/bigbugbb/iTracker">Source Code</a>
    ]]></string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="data_stale_warning">The data you are viewing may be out of date.</string>
    <string name="description_about">About</string>
    <string name="description_debug" translatable="false">Debug and tests</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_search">Search</string>
    <string name="description_settings">Settings</string>
    <string name="no_matching_upcoming_events">No matching upcoming events.</string>
    <string name="ok">OK</string>
    <string name="others">Others</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Create Account</string>
    <string name="already_a_memeber">Already a member?</string>
    <string name="invalid_email">Enter valid email address</string>
    <string name="invalid_username">Enter your username</string>
    <string name="invalid_password">Enter your password</string>
    <string name="invalid_password_length">Password must have at least 8 characters</string>
    <string name="invalid_password_confirmation">Enter your password confirmation</string>
    <string name="invalid_password_confirmation2">Password confirmation is not the same as password</string>
    <string name="title_about">About</string>
    <string name="title_activity_debug_action_runner">DebugActionRunnerActivity</string>
    <string name="title_activity_simple_signle_pane">SimpleSignlePaneActivity</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="topics">Topics</string>
    <string name="creating_new_account">Creating...</string>
    <string name="sign_in_user">Waiting...</string>
    <string name="years">Years</string>
    <string name="title_activity_upcoming_events">Events</string>
    <string name="back_pressed_prompt">Press again to quit</string>
    <string name="network_disconnected">Can\'t find any network connection.</string>
    <string name="media_uri_not_found">Can\'t find the uri for this media.</string>
    <string name="play_error_message">Impossible to play the video.</string>
    <string name="play_progressive_error_message">Impossible to play the progressive video.</string>
    <string name="no_download_available">You don\'t have any downloads.</string>
    <string name="download_without_selection">You must select a video to download.</string>
    <string name="share_youtube_to">Share the youtube to...</string>
    <string name="media_dialog_title">File properties</string>
    <string name="media_dialog_file_title">Title:</string>
    <string name="media_dialog_file_path">Path:</string>
    <string name="media_dialog_file_size">Size:</string>
    <string name="media_dialog_file_finished">Finished:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_footprint">Footprint</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_photo_detail">PhotoDetailActivity</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="invite_friends">Invite friends to iTracker</string>
    <string name="google_play_not_available">Google Play Services not available</string>
    <string name="connection_to_google_play_failed">Connection to Play Services failed.</string>
    <string name="video_submitted_to_youtube">Video submitted to YouTube</string>
    <string name="load_more_watch_history">Load more watch history...</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="require_all_basic_permissions">The app needs the basic permission to track your data.</string>
    <string name="require_take_photo_permissions">The app needs the permission to take a picture and save it on your device.</string>
    <string name="require_photos_access_permission">The app needs the permission to read your photos.</string>
    <string name="require_get_accounts_permission">The app needs this permission to choose your google account before accessing your youtube.</string>
    <string name="notification_media_name">RX_480_Giveaway!_PLUS_WD_Giveaway_Winners_Announced.mp4</string>
    <string name="download_allowed_when_wifi_connected">Download is only allowed with WIFI connected!</string>
    <string name="playback_downloaded_file_failed">Failed to open the file, it might be removed or renamed.</string>
    <string name="file_download_wifi_connected">Start file downloading when WIFI is connected</string>
    <string name="file_download_wifi_disconnected">Pause file downloading until WIFI is disconnected again</string>
    <string name="cancel_download_prompt">Are you sure you want to cancel this download?</string>
    <string name="remove_downloaded_data_warning">data downloaded so far will also be removed"</string>
    <string name="delete_file_prompt">Are you sure you want to delete it?</string>
</resources>