<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.TrackerActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_menu_search"
          android:orderInCategory="200"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_clear"
          android:title="@string/action_cancel"
          android:icon="@drawable/ic_ab_close"
          android:orderInCategory="300"
          android:visible="false"
          app:showAsAction="ifRoom"/>
</menu>
