<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_current_downloads"
          android:title="@string/action_download"
          android:icon="@drawable/ic_action_download"
          android:orderInCategory="200"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_grid"
          android:title="@string/action_grid"
          android:icon="@drawable/ic_action_grid"
          android:orderInCategory="300"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_list"
          android:title="@string/action_list"
          android:icon="@drawable/ic_action_list"
          android:orderInCategory="400"
          android:visible="false"
          app:showAsAction="ifRoom"/>
</menu>