<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:padding="24dp"
              android:layout_gravity="center_horizontal"
              android:orientation="vertical">

    <!--<ImageView-->
        <!--android:id="@+id/photo_setting"-->
        <!--android:layout_width="56dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:clickable="true"-->
        <!--android:padding="1dp"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:cropToPadding="true"-->
        <!--android:background="@drawable/border_image"-->
        <!--android:src="@drawable/ic_add_prayer_photo"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/media_dialog_file_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/media_file_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="郭德纲单口相声《楚汉争霸》"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/media_dialog_file_path"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/media_file_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="/sdcard/iTracker/downloads/"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/media_dialog_file_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/media_file_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="205.72 MB (215,707,701 Bytes)"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/media_dialog_file_finished"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/media_file_finished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="8/23/16 10:37:26 PM"/>

    </LinearLayout>

</LinearLayout>